--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yash Bhavsar's Portfolio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Yash Bhavsars Portfolio</title>
 </head>
 <body>
-    <header>
-        <nav>
-            
-        </nav>
-    </header>
+  <div class="wrapper">
+    <div id="stars1"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
+
+  </div>
 </body>
 </html>
