--- a/index.html
+++ b/index.html
@@ -7,11 +7,34 @@
   <title>Yash Bhavsars Portfolio</title>
 </head>
 <body>
-  <div class="wrapper">
-    <div id="stars1"></div>
-    <div id="stars2"></div>
-    <div id="stars3"></div>
+  <div id="stars1"></div>
+  <div id="stars2"></div>
+  <div id="stars3"></div>
+  <div id="blipstars"></div>
+  <div id="content">
+    <div id="grid">
+        <p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p>
+        <p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p>
+        <p></p><p></p><p></p><p></p>
+    </div>
+
+    <nav>
+      <ul>
+        <h1>Yash Bhavsar</h1>
+        <li>Home</li>
+        <li>About</li>
+        <li>Projects</li>
+        <li>Resume</li>
+        <li>Contact</li>
+
+      </ul>
+    </nav>
+    <Section id="About">About</Section>
+    <section id="Projects">Projects</section>
+    <section id="Contact">Contact</section>
+
 
   </div>
+
 </body>
 </html>
