--- a/index.html
+++ b/index.html
@@ -7,34 +7,57 @@
   <title>Yash Bhavsars Portfolio</title>
 </head>
 <body>
-  <div id="stars1"></div>
+
+
+  <div id="stars1"></div>                              <!--Starry Background-->
   <div id="stars2"></div>
   <div id="stars3"></div>
   <div id="blipstars"></div>
-  <div id="content">
+
+
+  <div id="content">                                   <!--Content of Page-->
+    
     <div id="grid">
-        <p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p>
-        <p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p>
-        <p></p><p></p><p></p><p></p>
+        <p></p><p></p><p></p><p></p><p></p>
+        <p></p><p></p><p></p><p></p><p></p>
+        <p></p><p></p><p></p><p></p><p></p>
+        <p></p><p></p><p></p><p></p><p></p>
     </div>
 
-    <nav>
-      <ul>
-        <h1>Yash Bhavsar</h1>
-        <li>Home</li>
-        <li>About</li>
-        <li>Projects</li>
-        <li>Resume</li>
-        <li>Contact</li>
+    <section id="navigation"></section>                <!--To make a translucent background-->
+    
+    <nav>                                              <!--Actual navigation-->
+      <h1>Yash Bhavsar</h1>
 
+      <ul>
+        <li><a href="#About">About</a></li>
+        <li><a href="#Projects">Projects</a></li>
+        <li><a href="#">Resume</a></li>
+        <li><a href="#Contact">Contact</a></li>
       </ul>
     </nav>
-    <Section id="About">About</Section>
-    <section id="Projects">Projects</section>
-    <section id="Contact">Contact</section>
 
+    <Section id="About">
+      <img src="" alt="">
+      <div class="word">
+        <span></span>
+      </div>
+      <p id="AboutMe">I am a second year Electrical Engineering student at McMaster University. I have a passion for programming and often find myself lost in the flow of it. I like the collaboration aspect involved with team environments, but can also work independantly. </p>
+    </Section>
+
+    <section id="Projects">
+      Projects
+    </section>
+
+    <section id="Contact">
+      <div id="ContactMe">Contact Me</div>
+      <ul id="Contacts">
+        <li id="Facebook"><a href="https://www.facebook.com/yash.bhavsar.37853">Facebook</a></li>
+        <li id="LinkedIn"><a href="https://www.linkedin.com/in/yash-bhavsar-75a0081b8/">LinkedIn</a></li>
+        <li id="Github"><a href="https://github.com/yashexe">Github</a></li>
+      </ul>
+    </section>
 
   </div>
-
 </body>
 </html>
