--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/Yash-Bhavsar-s-Portfolio/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Yash Bhavsars Portfolio</title>
 </head>
 <body>
@@ -32,13 +32,13 @@
       <ul>
         <li><a href="#About">About</a></li>
         <li><a href="#Projects">Projects</a></li>
-        <li><a href="#">Resume</a></li>
+        <li><a href="bhavsary_resume.pdf" target="_blank">Resume</a></li>
         <li><a href="#Contact">Contact</a></li>
       </ul>
     </nav>
 
     <Section id="About">
-      <img src="" alt="">
+      <img src="Yash.jpg">
       <div class="word">
         <span></span>
       </div>
@@ -46,7 +46,11 @@
     </Section>
 
     <section id="Projects">
-      Projects
+      <div id="ThisSite">
+        <h1>Portfolio Site</h1>
+        <img src="website.png">
+        <p>This website was created with HTML and CSS and is a display of my knowledge of said languages. The files are accessible through my Github.</p>
+      </div>
     </section>
 
     <section id="Contact">
