--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
       <div class="word">
         <span></span>
       </div>
-      <p id="AboutMe">I am a second year Electrical Engineering student at McMaster University. I have a passion for programming and often find myself lost in the flow of it. I like the collaboration aspect involved with team environments, but can also work independantly. </p>
+      <p id="AboutMe">I am a second year Electrical Engineering student at McMaster University. I love to program and have spent countless hours over the past few years learning new languages, whether it be for school, or a project of my own. I enjoy collaborating with others as a part of a team, and am great at working on independant tasks too.</p>
     </Section>
 
     <section id="Projects">
+      <div id="TitleProjects">Projects</div>
       <div id="ThisSite">
         <h1>Portfolio Site</h1>
         <img src="website.png">
@@ -53,7 +54,7 @@
       </div>
     </section>
 
-    <section id="Contact">
+    <section id="Contact"><!--For actual contacts-->
       <div id="ContactMe">Contact Me</div>
       <ul id="Contacts">
         <li id="Facebook"><a href="https://www.facebook.com/yash.bhavsar.37853">Facebook</a></li>
@@ -61,6 +62,8 @@
         <li id="Github"><a href="https://github.com/yashexe">Github</a></li>
       </ul>
     </section>
+
+    <section id="contactbackground"></section><!--For background--> 
 
   </div>
 </body>
