--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="word">
         <span></span>
       </div>
-      <p id="AboutMe">I am a second year Electrical Engineering student at McMaster University. I love to program and have spent countless hours over the past few years learning new languages, whether it be for school, or a project of my own. I enjoy collaborating with others as a part of a team, and am great at working on independant tasks too.</p>
+      <p id="AboutMe">I am a third year Electrical Engineering co-op student at McMaster University. I love to program and have spent countless hours over the past few years learning new languages, whether it be for school, or a project of my own. I enjoy collaborating with others as a part of a team, and am great at working on independant tasks too.</p>
     </Section>
 
     <section id="Projects">
