--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <ul>
         <li><a href="#About">About</a></li>
         <li><a href="#Projects">Projects</a></li>
-        <li><a href="bhavsary_resume.pdf" target="_blank">Resume</a></li>
+        <li><a href="YashBhavsar_Resume.pdf" target="_blank">Resume</a></li>
         <li><a href="#Contact">Contact</a></li>
       </ul>
     </nav>
