--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/Yash-Bhavsar-s-Portfolio/styles.css">
+  <link rel="stylesheet" href="/styles.css">
   <title>Yash Bhavsars Portfolio</title>
 </head>
 <body>
@@ -32,7 +32,7 @@
       <ul>
         <li><a href="#About">About</a></li>
         <li><a href="#Projects">Projects</a></li>
-        <li><a href="YashBhavsar_Resume.pdf" target="_blank">Resume</a></li>
+        <li><a href="Yash_Bhavsar_Resume.pdf" target="_blank">Resume</a></li>
         <li><a href="#Contact">Contact</a></li>
       </ul>
     </nav>
