--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
 </head>
 <body>
 
-
-  <div id="stars1"></div>                              <!--Starry Background-->
-  <div id="stars2"></div>
-  <div id="stars3"></div>
-  <div id="blipstars"></div>
-
+<div id="star">
+  <div id="stars">
+    <div id="stars1"></div>                              <!--Starry Background-->
+    <div id="stars2"></div>
+    <div id="stars3"></div>
+    <div id="blipstars"></div>
+  </div>
+  <div id="stars01">
+    <div id="stars1"></div>                              <!--Starry Background-->
+    <div id="stars2"></div>
+    <div id="stars3"></div>
+    <div id="blipstars"></div>
+  </div>
+  </div>
 
   <div id="content">                                   <!--Content of Page-->
     
@@ -47,11 +55,21 @@
 
     <section id="Projects">
       <div id="TitleProjects">Projects</div>
-      <div id="ThisSite">
+      <div id="r1">
+      <div id="ThisSite" >
         <h1>Portfolio Site</h1>
-        <img src="website.png">
+        <a href="https://yashexe.github.io/Yash-Bhavsar-s-Portfolio"><img src="website.png"></a>
         <p>This website was created with HTML and CSS and is a display of my knowledge of said languages. The files are accessible through my Github.</p>
       </div>
+      <div id="ThisSite">
+        <h1>Calculator</h1>
+        <a href="http://www.bhavsarysimplecalc.com/"><img src="calc.jpg"></a>
+        <p>
+          React-based App that implements various math functions, allowing users to perform calculations and reset, delete, 
+          or equalize their inputs through interactive buttons, resulting in a user-friendly experience.
+        </p>
+      </div>
+    </div>
     </section>
 
     <section id="Contact"><!--For actual contacts-->
