--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       <div id="ThisSite">
         <h1>Calculator</h1>
-        <a href="http://www.bhavsarysimplecalc.com/"><img src="calc.jpg"></a>
+        <a href="https://yashexe.github.io/simpleCalculator"><img src="calc.jpg"></a>
         <p>
           React-based App that implements various math functions, allowing users to perform calculations and reset, delete, 
           or equalize their inputs through interactive buttons, resulting in a user-friendly experience.
