Links open in new tab

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/styles.css">
   <title>Yash Bhavsars Portfolio</title>
 </head>
 <body>
-
-<div id="star">
+  <div id="star">
   <div id="stars">
     <div id="stars1"></div>                              <!--Starry Background-->
     <div id="stars2"></div>
@@ -56,28 +55,38 @@
     <section id="Projects">
       <div id="TitleProjects">Projects</div>
       <div id="r1">
-      <div id="ThisSite" >
-        <h1>Portfolio Site</h1>
-        <a href="https://yashexe.github.io/Yash-Bhavsar-s-Portfolio"><img src="website.png"></a>
-        <p>This website was created with HTML and CSS and is a display of my knowledge of said languages. The files are accessible through my Github.</p>
+        <div id="ThisSite" >
+          <h1>
+            Portfolio Site
+          </h1>
+          <a href="https://yashexe.github.io/Yash-Bhavsar-s-Portfolio">
+            <img src="website.png">
+          </a>
+          <p>
+            This website was created with HTML and CSS and is a display of my knowledge of said languages. The files are accessible through my Github.
+          </p>
+        </div>
+        <div id="ThisSite">
+          <h1>
+            Calculator
+          </h1>
+          <a href="https://yashexe.github.io/Simple-Calculator/" target="_blank">
+            <img src="calc.jpg">
+          </a>
+          <p>
+            React-based App that implements various math functions, allowing users to perform calculations and reset, delete, 
+            or equalize their inputs through interactive buttons, resulting in a user-friendly experience.
+          </p>
+        </div>
       </div>
-      <div id="ThisSite">
-        <h1>Calculator</h1>
-        <a href="https://yashexe.github.io/Simple-Calculator"><img src="calc.jpg"></a>
-        <p>
-          React-based App that implements various math functions, allowing users to perform calculations and reset, delete, 
-          or equalize their inputs through interactive buttons, resulting in a user-friendly experience.
-        </p>
-      </div>
-    </div>
     </section>
 
     <section id="Contact"><!--For actual contacts-->
       <div id="ContactMe">Contact Me</div>
       <ul id="Contacts">
-        <li id="Facebook"><a href="https://www.facebook.com/yash.bhavsar.37853">Facebook</a></li>
-        <li id="LinkedIn"><a href="https://www.linkedin.com/in/yash-bhavsar-75a0081b8/">LinkedIn</a></li>
-        <li id="Github"><a href="https://github.com/yashexe">Github</a></li>
+        <li id="Facebook"><a href="https://www.facebook.com/yash.bhavsar.37853" target="_blank">Facebook</a></li>
+        <li id="LinkedIn"><a href="https://www.linkedin.com/in/yash-bhavsar-75a0081b8/" target="_blank">LinkedIn</a></li>
+        <li id="Github"><a href="https://github.com/yashexe" target="_blank">Github</a></li>
       </ul>
     </section>
 
