--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <h1>
             Portfolio Site
           </h1>
-          <a href="https://yashexe.github.io/Yash-Bhavsar-s-Portfolio">
+          <a href="#navigation">
             <img src="website.png">
           </a>
           <p>
