--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav>                                              <!--Actual navigation-->
       <h1>Yash Bhavsar</h1>
 
-      <ul>
+      <ul id = "Headings">
         <li><a href="#About">About</a></li>
         <li><a href="#Projects">Projects</a></li>
         <li><a href="Yash_Bhavsar_Resume.pdf" target="_blank">Resume</a></li>
@@ -63,7 +63,8 @@
             <img src="website.png">
           </a>
           <p>
-            This website was created with HTML and CSS and is a display of my knowledge of said languages. The files are accessible through my Github.
+            This website was created with HTML and CSS and is a display of my knowledge of said languages. The files are accessible
+             through my Github.
           </p>
         </div>
         <div id="ThisSite">
@@ -76,6 +77,18 @@
           <p>
             React-based App that implements various math functions, allowing users to perform calculations and reset, delete, 
             or equalize their inputs through interactive buttons, resulting in a user-friendly experience.
+          </p>
+        </div>
+        <div id="ThisSite2">
+          <h1>
+            Collatz Conjecture
+          </h1>
+          <a href="https://github.com/yashexe/Singular-Collatz-Conjecture" target="_blank">
+            <img src="graph.png">
+          </a>
+          <p>
+            Python script that generates a sequence of numbers and plots them using the Hailstone sequence, resulting in a 
+            visual representation (via matplotlib) of the conjecture.
           </p>
         </div>
       </div>
