--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             Collatz Conjecture
           </h1>
           <a href="https://github.com/yashexe/Singular-Collatz-Conjecture" target="_blank">
-            <img src="graph.png">
+            <img src="Graph.png">
           </a>
           <p>
             Python script that generates a sequence of numbers and plots them using the Hailstone sequence, resulting in a 
