--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
             <img src="Graph.png">
           </a>
           <p>
-            Python script that generates a sequence of numbers and plots them using the Hailstone sequence, resulting in a 
-            visual representation (via matplotlib) of the conjecture.
+            Python-based GUI(via tkinter) that upon entering a positive integer, generates multiple collatz sequence figures based on it (via matplotlib). 
           </p>
         </div>
       </div>
