--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <ul id = "Headings">
         <li><a href="#About">About</a></li>
         <li><a href="#Projects">Projects</a></li>
-        <li><a href="Yash_Bhavsar_Resume.pdf" target="_blank">Resume</a></li>
+        <li><a href="Yash Bhavsar Resume.pdf" target="_blank">Resume</a></li>
         <li><a href="#Contact">Contact</a></li>
       </ul>
     </nav>
