Clean redundant css. Update Resume. Add Medium contact.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <nav>                                              <!--Actual navigation-->
       <h1>Yash Bhavsar</h1>
 
-      <ul id = "Headings">
+      <ul>
         <li><a href="#About">About</a></li>
         <li><a href="#Projects">Projects</a></li>
-        <li><a href="Yash Bhavsar Resume.pdf" target="_blank">Resume</a></li>
+        <li><a href="Yash Bhavsar.pdf" target="_blank">Resume</a></li>
         <li><a href="#Contact">Contact</a></li>
       </ul>
     </nav>
@@ -79,7 +79,7 @@
             or equalize their inputs through interactive buttons, resulting in a user-friendly experience.
           </p>
         </div>
-        <div id="ThisSite2">
+        <div id="ThisSite">
           <h1>
             Collatz Conjecture
           </h1>
@@ -96,8 +96,8 @@
     <section id="Contact"><!--For actual contacts-->
       <div id="ContactMe">Contact Me</div>
       <ul id="Contacts">
-        <li id="Facebook"><a href="https://www.facebook.com/yash.bhavsar.37853" target="_blank">Facebook</a></li>
-        <li id="LinkedIn"><a href="https://www.linkedin.com/in/yash-bhavsar-75a0081b8/" target="_blank">LinkedIn</a></li>
+        <li id="Facebook"><a href="https://yashexe.medium.com/" target="_blank">Medium</a></li>
+        <li id="LinkedIn"><a href="https://www.linkedin.com/in/yash-bhav" target="_blank">LinkedIn</a></li>
         <li id="Github"><a href="https://github.com/yashexe" target="_blank">Github</a></li>
       </ul>
     </section>
