--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Yash Bhavsars Portfolio</title>
+  <title>Yash Bhavsar's Portfolio</title>
 </head>
 <body>
   <div id="star">
@@ -39,13 +39,13 @@
       <ul>
         <li><a href="#About">About</a></li>
         <li><a href="#Projects">Projects</a></li>
-        <li><a href="Yash Bhavsar.pdf" target="_blank">Resume</a></li>
+        <li><a href="assets/Yash Bhavsar.pdf" target="_blank">Resume</a></li>
         <li><a href="#Contact">Contact</a></li>
       </ul>
     </nav>
 
     <Section id="About">
-      <img src="Yash.jpg">
+      <img src="assets/Yash.jpg">
       <div class="word">
         <span></span>
       </div>
@@ -56,23 +56,17 @@
       <div id="TitleProjects">Projects</div>
       <div id="r1">
         <div id="ThisSite" >
-          <h1>
-            Portfolio Site
-          </h1>
-          <a href="#navigation">
-            <img src="website.png">
-          </a>
+          <h1>Portfolio Site</h1>
+          <a href="#navigation"><img src="assets/website.png"></a>
           <p>
             This website was created with HTML and CSS and is a display of my knowledge of said languages. The files are accessible
              through my Github.
           </p>
         </div>
         <div id="ThisSite">
-          <h1>
-            Calculator
-          </h1>
+          <h1>Calculator</h1>
           <a href="https://yashexe.github.io/Simple-Calculator/" target="_blank">
-            <img src="calc.jpg">
+            <img src="assets/calc.jpg">
           </a>
           <p>
             React-based App that implements various math functions, allowing users to perform calculations and reset, delete, 
@@ -80,12 +74,8 @@
           </p>
         </div>
         <div id="ThisSite">
-          <h1>
-            Collatz Conjecture
-          </h1>
-          <a href="https://github.com/yashexe/Collatz-Conjecture" target="_blank">
-            <img src="Graph.png">
-          </a>
+          <h1>Collatz Conjecture</h1>
+          <a href="https://github.com/yashexe/Collatz-Conjecture" target="_blank"><img src="assets/Graph.png"></a>
           <p>
             Python-based GUI(via tkinter) that upon entering a positive integer, generates multiple collatz sequence figures based on it (via matplotlib). 
           </p>
