--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Yash Bhavsar's Portfolio</title>
+  <link rel="icon" type="image/x-icon" href="/assets/comet.png">
 </head>
 <body>
   <div id="star">
