--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <ul>
         <li><a href="#About">About</a></li>
         <li><a href="#Projects">Projects</a></li>
-        <li><a href="assets/Yash Bhavsar.pdf" target="_blank">Resume</a></li>
+        <li><a href="assets/Yash Bhavsar SWE_Resume.pdf" target="_blank">Resume</a></li>
         <li><a href="#Contact">Contact</a></li>
       </ul>
     </nav>
